--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "static/ace-builds"]
-	path = static/ace-builds
-	url = https://github.com/ajaxorg/ace-builds/
+[submodule "jschon"]
+	path = jschon
+	url = https://github.com/marksparkza/jschon
