Use paths consistently for local and docker runs

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,4 +7,5 @@ COPY jschon jschon/
 WORKDIR /srv/api
 RUN pip install -r requirements.txt
 
+WORKDIR /srv
 CMD ["sanic", "api.app", "--host=0.0.0.0", "--port=4444", "--workers=4", "--no-access-logs"]
