--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -2,8 +2,6 @@ FROM python:3.11
 
 WORKDIR /srv
 COPY ui ui/
-
-WORKDIR /srv/ui
-RUN pip install -r requirements.txt
+RUN pip install -r ui/requirements.txt
 
 CMD ["sanic", "ui.app", "--host=0.0.0.0", "--port=8888", "--workers=4", "--no-access-logs"]
