--- a/ui/requirements.txt
+++ b/ui/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiofiles==23.2.1
     # via sanic
-certifi==2023.7.22
+certifi==2023.11.17
     # via requests
 charset-normalizer==3.3.2
     # via requests
@@ -24,6 +24,8 @@ markupsafe==2.1.3
     # via jinja2
 multidict==6.0.4
     # via sanic
+pyyaml==6.0.1
+    # via -r requirements.in
 requests==2.31.0
     # via -r requirements.in
 sanic==23.6.0
@@ -36,7 +38,7 @@ typing-extensions==4.8.0
     # via sanic
 ujson==5.8.0
     # via sanic
-urllib3==2.0.7
+urllib3==2.1.0
     # via requests
 uvloop==0.19.0
     # via sanic
